# scale-colorizr

./: Cargo.toml  README.md  build.rs  bundler.toml
.cargo/: config.toml
.gitea/workflows/publish/: publish.yaml
.github/workflows/: build.yaml
src/: editor.rs  filter.rs  lib.rs  main.rs  spectrum.rs
src/editor/: utils.rs
