[package]
name = "scale_colorizr"
edition = "2021"
authors = ["joe sorensen <hello@murl.digital>"]
license = "GPL-3.0-or-later"
homepage = "https://cozydsp.space"
description = "Filter based sound colorizer"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "scale_colorizr"
required-features = ["editor"]

[features]
editor = ["nih_plug/standalone"]

[dependencies]
crossbeam = "0.8.4"
colorgrad = { git = "https://github.com/mazznoer/colorgrad-rs.git" }
cozy-util = { git = "https://github.com/cozy-dsp/cozy-util.git", version = "0.1.0" }
nih_plug = { git = "https://github.com/murl-digital/nih-plug.git", branch = "egui-git", features = ["assert_process_allocs", "simd"] }
nih_plug_egui = { git = "https://github.com/murl-digital/nih-plug.git", branch = "egui-git" }
noise = "0.9"
num-complex = "0.4.5"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
once_cell = { version = "1.19.0", features = ["parking_lot"] }
libsw = "3.3"
cozy-ui = { git = "https://vcs.cozydsp.space/cozy-dsp/cozy-ui.git", branch = "egui-git", version = "0.1.0" }
egui_extras = { git = "https://github.com/emilk/egui", rev = "c1eb3f884db8bc4f52dbae4f261619cee651f411", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
realfft = "3.3.0"
triple_buffer = "7.0.0"

[build-dependencies]
anyhow = "1.0.81"
vergen = { version = "8.3.1", features = ["git", "gitcl"] }

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
