[package]
name = "scale_colorizr"
edition = "2021"
authors = ["joe sorensen <hello@murl.digital>"]
license = "GPL-3.0-or-later"
homepage = "https://cozydsp.space"
description = "Filter based sound colorizer"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "scale_colorizr"
required-features = ["editor"]

[features]
editor = ["nih_plug/standalone"]
fma = ["cozy-util/fma"]

[dependencies]
crossbeam = "0.8.4"
colorgrad = { git = "https://github.com/mazznoer/colorgrad-rs.git" }
cozy-util = { registry = "cdsp", version = "0.2.2", features = ["simd"] }
nih_plug = { git = "https://github.com/murl-digital/nih-plug.git", branch = "bump-dependencies", features = [
    "assert_process_allocs",
    "simd",
] }
nih_plug_egui = { git = "https://github.com/murl-digital/nih-plug.git", branch = "bump-dependencies" }
noise = "0.9"
num-complex = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
once_cell = { version = "1", features = ["parking_lot"] }
libsw = "3.3"
cozy-ui = { git = "https://vcs.cozydsp.space/cozy-dsp/cozy-ui.git", version = "0.2.0" }
egui_extras = { version = "0.28", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
realfft = "3.3"
triple_buffer = "7"
directories = "5"
toml = "0.8"
strum_macros = "0.26"

[build-dependencies]
anyhow = "1.0.81"
vergen = { version = "8.3.1", features = ["git", "gitcl"] }

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
